added Krannert area and other options close to campus

--- a/food.html
+++ b/food.html
@@ -33,47 +33,49 @@
         <p>We have an amazing food scene in Champaign-Urbana! In this list, restaurants are grouped by location (from nearest to farthest) with transportation options. This list is not exhaustive but is intended to highlight local businesses. There should be plenty of options for your stay during RIP. See the local transportation page (coming soon!) for a description of the local area and transportation options).</p>
         <p>
           <h5>Campustown</h5>
-	  <h6>Distance from Illini Union: 15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h6>
-	  Mia Za's - Customizable pizza, pasta, and sandwiches.<br>
-	  Shawarma Joint - Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
-	  Midsummer Lounge - Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
-          Teamoji - Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
-	  Cocomero - Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
-	  Cravings - Chinese fast food. Great value for money.<br>
-	  Spoon House Korean Kitchen - Classic Korean dishes with some Korean-Mexican fusion options.<br>
-	  Latea Bubble Tea Lounge - Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
-	  Poke Lab - Build your own poke bowls.<br>
-	  GG Bowl (formerly Spicy Tang) - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
-	  Szechuan Taste - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
-	  Evo Cafe - Best Szechuan/Chengdu-style food in the area. Better to go with a group.<br>
-	  Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken.<br>
-	  Fat Sandwich Company - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
-	  Signature Grill - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
-	  Bangkok Thai Restaurant and Pho 911 - Classic Thai dishes and pho. Great value for money.<br>
-	  Sakanaya - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance.<br>
-	  Northern Cuisine - Amazing Chinese food from the northeastern (Dongbei) reagion. Better to go with a group.<br>
-	  Jurassic Grill - Typical burger joint with a hidden empanada menu.<br>
-	  Sushi Man - Good sushi restaurant. Better for takeout as there's not as much seating.<br>
-	  Naya Indian Cuisine - Really good northern style Indian food.<br>
-	  Moment Bakery - Chinese-style bakery with amazing pastries, breads, and cakes.<br>
-	  Tanaka Ramen and Izakaya - Decent ramen and other Japanese classics.<br>
-	  Maize Mexican Grill - A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
-	  <br>
-          <h5>Medium — 5-10m walk</h5>
-            Ko Fusion — ok sushi <br>
-            Sakanaya — better sushi, pricey <br>
-	    Lai Lai Wok, Mandarin Wok — big servings Chinese <br>
-            Insomnia Cookies — xquatra/Alex's favorite <br>
-            Fat Sandwich — best drunk food, ok when sober <br>
-            Burrito King — drunk Mexican food smothered in queso <br>
-	    Jurassic Grill - late night borgers with cajun fries, also sells empanadas<br>
-            Basil Thai — best Thai nearby<br>
-	    Bangkok Thai — arguably better Thai for Benpai<br>
-            Merry Ann's — Traditional american Diner, Tucker's fave<br>
-            Maize — second best Mexican nearby<br>
-            Lao Sze Chaun — Slightly upscale Chinese food. Students from China seem to like it<br>
-            
-			<br>
+	  <h6>Distance from Illini Union: 5-15 minutes walking or 2-4 stops on the 5W or 50W Green bus (free!)</h6>
+	    <br>
+	    Mia Za's - Customizable pizza, pasta, and sandwiches.<br>
+	    Shawarma Joint - Chipotle but Middle Eastern. One build your own bowl is easily two meals.<br>
+	    Midsummer Lounge - Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
+            Teamoji - Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
+	    Cocomero - Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
+	    Cravings - Chinese fast food. Great value for money.<br>
+	    Spoon House Korean Kitchen - Classic Korean dishes with some Korean-Mexican fusion options.<br>
+	    Latea Bubble Tea Lounge - Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
+	    Poke Lab - Build your own poke bowls.<br>
+	    GG Bowl (formerly Spicy Tang) - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
+	    Szechuan Taste - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
+	    Evo Cafe - Best Szechuan/Chengdu-style food in the area. Better to go with a group.<br>
+	    Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken.<br>
+	    Fat Sandwich Company - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
+	    Signature Grill - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
+	    Bangkok Thai Restaurant and Pho 911 - Classic Thai dishes and pho. Great value for money.<br>
+	    Brewlab - Local coffee shop.<br>
+	    Sakanaya - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance.<br>
+	    Northern Cuisine - Amazing Chinese food from the northeastern (Dongbei) reagion. Better to go with a group.<br>
+	    Jurassic Grill - Typical burger joint with a hidden empanada menu.<br>
+	    Sushi Man - Good sushi restaurant. Better for takeout as there's not as much seating.<br>
+	    Naya Indian Cuisine - Really good northern style Indian food.<br>
+	    Moment Bakery - Chinese-style bakery with amazing pastries, breads, and cakes.<br>
+	    Tanaka Ramen and Izakaya - Decent ramen and other Japanese classics.<br>
+	    Maize Mexican Grill - A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
+	    <br>
+          <h5>Krannert Area</h5>
+	  <h6>Distance from Illini Union: 10 minutes walking</h6>
+	    <br>
+	    The Bread Company - European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights.</br>
+	    Manolo's Pizza and Empanadas - New York style pizza by the slice and empanadas (both sweet and savory). Better for takeout as there's not much seating. Closed Sundays.<br>
+	    Dubai Grill - Like Shawarma Joint.<br>
+	    Bab Plus - Classic Korean food.<br>
+	    Caffe Paradiso - Sandwiches, coffee, and desserts. Obama visited once.<br>
+	    <br>
+	  <h5>Close to campus but not quite off campus</h5>
+	  <h6>Distance from Illini Union: within 15 minutes walking or a few stops on bus (free!)</h6>
+	    <br>
+	    Lao Sze Chuan Chinese Restaurant - Chinese restaurant with mostly Szechuan-style dishes (as the name might suggest).<br>
+	    Bakelab - Amazing croissants and other pastries (also sold at Brewlab).<br>
+	    <br>
           <h5>You *need* a car Far</h5>
       	    Original Pancake House — Sudzi/Brandon's favorite. <br>
             Golden Harbor — Best chinese in champaign, one dish feeds two <br>
