added downtown Urbana options and small formatting changes

--- a/food.html
+++ b/food.html
@@ -46,7 +46,7 @@
 	    Poke Lab - Build your own poke bowls.<br>
 	    GG Bowl (formerly Spicy Tang) - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
 	    Szechuan Taste - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
-	    Evo Cafe - Best Szechuan/Chengdu-style food in the area. Better to go with a group.<br>
+	    Evo Cafe - Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
 	    Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken.<br>
 	    Fat Sandwich Company - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
 	    Signature Grill - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
@@ -76,28 +76,28 @@
 	    Lao Sze Chuan Chinese Restaurant - Chinese restaurant with mostly Szechuan-style dishes (as the name might suggest).<br>
 	    Bakelab - Amazing croissants and other pastries (also sold at Brewlab).<br>
 	    <br>
-          <h5>You *need* a car Far</h5>
-      	    Original Pancake House — Sudzi/Brandon's favorite. <br>
-            Golden Harbor — Best chinese in champaign, one dish feeds two <br>
-	    Wingstop - who doesn't like chicken wings?
-            Black Dog — Best BBQ in Champaign <br>
-            Xinh Xinh Cafe - Vietnamese food, good pho and thai ice tea, vietnamese coffee with condensed milk<br>
-            Himalayan Chimney — More upscale Indian place<br>
-            Sushi Kame — Great sushi, bento boxes<br>
+	  <h5>Downtown Urbana (and area a little further out)</h5>
+	  <h6>Distance from Illini Union: a few stops on 10E Gold (weekdays only), 5 or 50E Green, 13 or 130N Silver (free one-way, fare required on the way back), or 5 minutes drive</h6>
+	    Courier Cafe - Classic American diner.<br>
+	    Rick's Bakery - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales.<br>
+	    El Paraiso - Latin American food including dishes like Mofongo, Jibarito, and pupusas.<br>
+	    Encanto Restaurant and Bar - Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
+	    Baldarotta's - Porketta sandwiches. Don't sleep on the fries (and add malt vinegar).<br>
+	    RegCakes - Gluten-free bakery.<br>
+	    Broadway Food Hall - Upscale cafeteria-style with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack.<br>
+            Xinh Xinh Cafe - Great pho and summer rolls.<br>
+            El Oasis - Mexicani-style ice cream.<br>
+	    La Mixteca - Classic Mexican restaurant. Decent birria tacos.<br>
+	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
+	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
+            Black Dog — Local BBQ joint.<br>
+	    Himalayan Chimney — Sitdown Indian restaurant <br>
             Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
-            Farren's — borgers<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
-            Cream and Flutter — cute lil pastry shop<br>
-            Papa Del's — "Deep Dish" pizza — more like bread cake imo but it's ok. <br>
-            Giordano's — Nobody seems to realize we have a real deep dish place here. <br>
-            El Oasis - Mexican ice cream. Get the spicy chocolate one.<br>
+            Black Dog — Local BBQ joint.<br>
+	    Himalayan Chimney — Sitdown Indian restaurant <br>
             Huaraches Moroleon - best Mexican nearby<br>
-	    El Patio - second best Mexican nearby<br>
-            Destihl — Pricier but heckin' delicious lunch/dinner <br>
-            Blind Pig — buncha real good locally made beer, but only that.<br>
-	    Pour Brothers - Another bar but you control how much comes out of the tap<br>
             Pekara — Reallllly good cafe. Awesome pastries. <br>
-            Portillo's — Chicago classic. Good italian beef, hotdogs, chocolate cake.<br>
         </p>
       </div>
     </div>
