added further options

--- a/food.html
+++ b/food.html
@@ -78,8 +78,10 @@
 	    <br>
 	  <h5>Downtown Urbana (and area a little further out)</h5>
 	  <h6>Distance from Illini Union: a few stops on 10E Gold (weekdays only), 5 or 50E Green, 13 or 130N Silver (free one-way, fare required on the way back), or 5 minutes drive</h6>
+	    <br>
 	    Courier Cafe - Classic American diner.<br>
 	    Rick's Bakery - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales.<br>
+	    Siam Terrace - Thai classics. Checkout their specials menu.<br>
 	    El Paraiso - Latin American food including dishes like Mofongo, Jibarito, and pupusas.<br>
 	    Encanto Restaurant and Bar - Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
 	    Baldarotta's - Porketta sandwiches. Don't sleep on the fries (and add malt vinegar).<br>
@@ -90,14 +92,34 @@
 	    La Mixteca - Classic Mexican restaurant. Decent birria tacos.<br>
 	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
 	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
-            Black Dog — Local BBQ joint.<br>
-	    Himalayan Chimney — Sitdown Indian restaurant <br>
-            Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
+	    <br>
+	    Pizzeria Antica - Upscale pizza certified by the City of Naples.<br>
+	    Maize at the Station - Same as Maize on Green St but a larger menu and sitdown.<br>
+	    Heavy Spoon Co - Ice cream mixed with classic, nostalgic breakfast cerals.<br>
+	    Nando Milano - Fancy Italian.<br>
             Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
             Black Dog — Local BBQ joint.<br>
-	    Himalayan Chimney — Sitdown Indian restaurant <br>
-            Huaraches Moroleon - best Mexican nearby<br>
+	    Himalayan Chimney — Sitdown Indian restaurant.<br>
+	    Jupiter's Pizzeria - Crispy thin crust pizza.<br>
+	    La Bahia - Mexican-style seafood.<br>
+	    Tasty Tart - Amazing individual-sized shortcrust pastries.<br>
+	    Afghan Cuisine Restaurant - Amazing Afghani food.Might have long waits as they recently opened at this location.<br>
+            Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
             Pekara — Reallllly good cafe. Awesome pastries. <br>
+	  <h5>Further down south on Neil</h5>
+	  <h6>Distance from Illini Union: a few stops on 1 or 100S Yellow (free one-way, fare required on the way back), or 10 minutes drive</h6>
+	    <br>
+	    Lanxang Thai-Lao Cuisine - Thai classics.<br>
+	    Ishi Sushi and Kaori's oven - Affordable and really good quality omakase (limited hours) and amazing Japanese-style cakes and pastries (weekdays or order ahead).<br>
+	    Jarling's Custard Cup - Local favorite for frozen custard and concrete mixers.<br>
+	    Moki Sushi - All you can eat sushi.<br>
+	  <h5>Far from campus</h5>
+	  <h6>Distance from Illini Union: within 15 minutes drive</h6>
+	    <br>
+	    Cheese and Crackers - Cheese, crackers, and sushi-quality fish (some assembly required). Really good sandwiches.<br>
+	    Sun Singer - Sitdown American restaurant, also popular for brunch.<br>
+	    Eighty-Three Vietnamese Cuisine - Vietnamese classic including pho and banh mi.<br>
+	    San Maru - Best Korean-style food in town. Soups are great on a cold day.<br>
         </p>
       </div>
     </div>
