small adjustments to descriptions

--- a/food.html
+++ b/food.html
@@ -79,7 +79,7 @@
 	  <h5>Downtown Urbana (and area a little further out)</h5>
 	  <h6>Distance from Illini Union: a few stops on 10E Gold (weekdays only), 5 or 50E Green, 13 or 130N Silver (free one-way, fare required on the way back), or 5 minutes drive</h6>
 	    <br>
-	    Courier Cafe - Classic American diner.<br>
+	    Courier Cafe - Classic American diner with meals made from scratch daily.<br>
 	    Rick's Bakery - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales.<br>
 	    Siam Terrace - Thai classics. Checkout their specials menu.<br>
 	    El Paraiso - Latin American food including dishes like Mofongo, Jibarito, and pupusas.<br>
@@ -98,15 +98,14 @@
 	    Maize at the Station - Same as Maize on Green St but a larger menu and sitdown.<br>
 	    Heavy Spoon Co - Ice cream mixed with classic, nostalgic breakfast cerals.<br>
 	    Nando Milano - Fancy Italian.<br>
-            Watson's Shack and Rail — <b>Fried chicken and alcoholic slushies</b> (sign me UP)<br>
+            Watson's Shack and Rail — Great local fried chicken restaurant.<br>
             Black Dog — Local BBQ joint.<br>
 	    Himalayan Chimney — Sitdown Indian restaurant.<br>
 	    Jupiter's Pizzeria - Crispy thin crust pizza.<br>
 	    La Bahia - Mexican-style seafood.<br>
 	    Tasty Tart - Amazing individual-sized shortcrust pastries.<br>
 	    Afghan Cuisine Restaurant - Amazing Afghani food.Might have long waits as they recently opened at this location.<br>
-            Moki Sushi — Sushi bufffeettt. Great quality for buffet sushi<br>
-            Pekara — Reallllly good cafe. Awesome pastries. <br>
+            Pekara — Cafe serving classic breakfast and lunch items with pastries made fresh daily.<br>
 	    <br>
 	  <h5>Further down south on Neil</h5>
 	  <h6>Distance from Illini Union: a few stops on 1 or 100S Yellow (free one-way, fare required on the way back), or 10 minutes drive</h6>
