added closed days, fixed typos

--- a/food.html
+++ b/food.html
@@ -40,34 +40,34 @@
 	    Midsummer Lounge - Chinese-style noodles. Soup noodles are amazing on a cold day. Don't sleep on the dumplings.<br>
             Teamoji - Boba, Korean corn dogs, Korean egg toasts, and mochi donuts.<br>
 	    Cocomero - Self-serve frozen yogurt, waffles, and bungeoppang/taiyaki.<br>
-	    Cravings - Chinese fast food. Great value for money.<br>
+	    Cravings - Chinese fast food. Great value for money. Closed Sundays.<br>
 	    Spoon House Korean Kitchen - Classic Korean dishes with some Korean-Mexican fusion options.<br>
 	    Latea Bubble Tea Lounge - Great boba and good non-caffeinated options too. Boba is made fresh in-house every day.<br>
 	    Poke Lab - Build your own poke bowls.<br>
 	    GG Bowl (formerly Spicy Tang) - Build your own Mala Xiangguo (like spicy hotpot, but without soup). Better to go with a group.<br>
 	    Szechuan Taste - Chinese restaurant with mostly Szechuan-style dishes but also Peking duck? Better to go with a group.<br>
 	    Evo Cafe - Szechuan/Chengdu-style food. Expect (numbing) spice. Better to go with a group.<br>
-	    Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken.<br>
+	    Asian Taste - Smaller Chinese cafe. Really good Jammy Fan Chicken (Huangmenji) and popcorn chicken. Closed Sundays.<br>
 	    Fat Sandwich Company - As the name implies, fat sandwiches. Maybe not the best right before a round...<br>
 	    Signature Grill - Skip the Chipotle-style options. Great dosas, samosas, Indian street food, and rotating specials.<br>
 	    Bangkok Thai Restaurant and Pho 911 - Classic Thai dishes and pho. Great value for money.<br>
-	    Brewlab - Local coffee shop.<br>
-	    Sakanaya - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance.<br>
-	    Northern Cuisine - Amazing Chinese food from the northeastern (Dongbei) reagion. Better to go with a group.<br>
+	    Brewlab - Local hip coffee shop.<br>
+	    Sakanaya - Sit-down sushi restaurant. Typically long lines but you can join their Yelp waitlist in advance. Typically only open for dinner, but also has lunch hours on Saturday.<br>
+	    Northern Cuisine - Amazing Chinese food from the northeastern (Dongbei) region. Better to go with a group.<br>
 	    Jurassic Grill - Typical burger joint with a hidden empanada menu.<br>
 	    Sushi Man - Good sushi restaurant. Better for takeout as there's not as much seating.<br>
 	    Naya Indian Cuisine - Really good northern style Indian food.<br>
-	    Moment Bakery - Chinese-style bakery with amazing pastries, breads, and cakes.<br>
-	    Tanaka Ramen and Izakaya - Decent ramen and other Japanese classics.<br>
+	    Moment Bakery - Chinese-style bakery with amazing pastries, breads, and cakes. Closed Sundays.<br>
+	    Tanaka Ramen and Izakaya - Decent ramen and other Japanese classics. Closed Sundays.<br>
 	    Maize Mexican Grill - A UIUC staple. Solid street tacos, burritos, and other Mexican classics.<br>
 	    <br>
           <h5>Krannert Area</h5>
 	  <h6>Distance from Illini Union: 10 minutes walking</h6>
 	    <br>
-	    The Bread Company - European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights.</br>
+	    The Bread Company - European-style cafe with fresh baked bread daily. Great sandwiches during weekday lunch hours and upscale pizza, pasta, and small plates weeknights and Saturday nights. Closed Sundays.</br>
 	    Manolo's Pizza and Empanadas - New York style pizza by the slice and empanadas (both sweet and savory). Better for takeout as there's not much seating. Closed Sundays.<br>
 	    Dubai Grill - Like Shawarma Joint.<br>
-	    Bab Plus - Classic Korean food.<br>
+	    Bab Plus - Classic Korean food. Closed Sundays.<br>
 	    Caffe Paradiso - Sandwiches, coffee, and desserts. Obama visited once.<br>
 	    <br>
 	  <h5>Close to campus but not quite off campus</h5>
@@ -80,48 +80,49 @@
 	  <h6>Distance from Illini Union: a few stops on 10E Gold (weekdays only), 5 or 50E Green, 13 or 130N Silver (free one-way, fare required on the way back), or 5 minutes drive</h6>
 	    <br>
 	    Courier Cafe - Classic American diner with meals made from scratch daily.<br>
-	    Rick's Bakery - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales.<br>
+	    Rick's Bakery - Local bakery selling freshly made breads, pastries, and sweets. Also have some lunch offerings including burritos and tamales. Closed Sundays.<br>
 	    Siam Terrace - Thai classics. Checkout their specials menu.<br>
-	    El Paraiso - Latin American food including dishes like Mofongo, Jibarito, and pupusas.<br>
+	    El Paraiso - Latin American food including dishes like Mofongo, Jibarito, and pupusas. Closed Sundays.<br>
 	    Encanto Restaurant and Bar - Mexican restaurant with a few Peruvian classics like Lomo Saltado. Good value for money.<br>
-	    Baldarotta's - Porketta sandwiches. Don't sleep on the fries (and add malt vinegar).<br>
-	    RegCakes - Gluten-free bakery.<br>
-	    Broadway Food Hall - Upscale cafeteria-style with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack.<br>
-            Xinh Xinh Cafe - Great pho and summer rolls.<br>
-            El Oasis - Mexicani-style ice cream.<br>
+	    Baldarotta's - Porketta sandwiches. Don't sleep on the fries (and add malt vinegar). On weekends, only open for lunch.<br>
+	    RegCakes - Gluten-free bakery. Closed Sundays.<br>
+	    Broadway Food Hall - Upscale cafeteria-style with many vendors including A Taste of Both Worlds (Filipino-Cambodian), Les Gourmets (Congolese), and Poke Shack. Closed Sundays.<br>
+            Xinh Xinh Cafe - Great pho and summer rolls. Closed Sundays.<br>
+            El Oasis - Mexican-style ice cream.<br>
+	    Panaderia San Miguel Mexican Bakery - Mexican-style bakery (as the name might suggest).<br>
 	    La Mixteca - Classic Mexican restaurant. Decent birria tacos.<br>
 	    <br>
 	  <h5>Downtown Champaign (and area a little further south on Neil)</h5>
 	  <h6>Distance from Illini Union: a few stops on 5 or 50W Green, 12 or 120W Teal, 1 or 100 N Yellow, or 2 or 20N Red (free one-way, fare required on the way back), or &lt; 10 minutes drive</h6>
 	    <br>
-	    Pizzeria Antica - Upscale pizza certified by the City of Naples.<br>
+	    Pizzeria Antica - Upscale pizza certified authentic by the City of Naples. Closed Sundays.<br>
 	    Maize at the Station - Same as Maize on Green St but a larger menu and sitdown.<br>
 	    Heavy Spoon Co - Ice cream mixed with classic, nostalgic breakfast cerals.<br>
-	    Nando Milano - Fancy Italian.<br>
-            Watson's Shack and Rail — Great local fried chicken restaurant.<br>
+	    Nando Milano - Fancy Italian. On weekends, open for late lunch and dinner.<br>
+            Watson's Shack and Rail — Great local fried chicken restaurant. Offers brunch on Sundays.<br>
             Black Dog — Local BBQ joint.<br>
 	    Himalayan Chimney — Sitdown Indian restaurant.<br>
 	    Jupiter's Pizzeria - Crispy thin crust pizza.<br>
 	    La Bahia - Mexican-style seafood.<br>
-	    Tasty Tart - Amazing individual-sized shortcrust pastries.<br>
-	    Afghan Cuisine Restaurant - Amazing Afghani food.Might have long waits as they recently opened at this location.<br>
+	    Tasty Tart - Amazing individual-sized shortcrust pastries. They close when they sell out!<br>
+	    Afghan Cuisine Restaurant - Amazing Afghani food. Might have long waits as they recently opened at this location. Closed Sundays.<br>
             Pekara — Cafe serving classic breakfast and lunch items with pastries made fresh daily.<br>
 	    <br>
 	  <h5>Further down south on Neil</h5>
 	  <h6>Distance from Illini Union: a few stops on 1 or 100S Yellow (free one-way, fare required on the way back), or 10 minutes drive</h6>
 	    <br>
-	    Lanxang Thai-Lao Cuisine - Thai classics.<br>
-	    Ishi Sushi and Kaori's oven - Affordable and really good quality omakase (limited hours) and amazing Japanese-style cakes and pastries (weekdays or order ahead).<br>
+	    Lanxang Thai-Lao Cuisine - Thai classics. Closed Sundays.<br>
+	    Ishi Sushi and Kaori's oven - Affordable and really good quality omakase (call in advance for availability) and amazing Japanese-style cakes and pastries (weekdays or order ahead for pickup).<br>
 	    Jarling's Custard Cup - Local favorite for frozen custard and concrete mixers.<br>
-	    Moki Sushi - All you can eat sushi.<br>
+	    Moki Sushi - All you can eat sushi. Saturdays open for late lunch and dinner (usually open for lunch and dinner).<br>
 	    <br>
 	  <h5>Far from campus</h5>
 	  <h6>Distance from Illini Union: within 15 minutes drive</h6>
 	    <br>
-	    Cheese and Crackers - Cheese, crackers, and sushi-quality fish (some assembly required). Really good sandwiches.<br>
+	    Cheese and Crackers - Cheese, crackers, European-style deli, and sushi-quality fish (some assembly required). Really good sandwiches. Closed Sundays.<br>
 	    Sun Singer - Sitdown American restaurant, also popular for brunch.<br>
-	    Eighty-Three Vietnamese Cuisine - Vietnamese classic including pho and banh mi.<br>
-	    San Maru - Best Korean-style food in town. Soups are great on a cold day.<br>
+	    Eighty-Three Vietnamese Cuisine - Vietnamese classic including pho and banh mi. Closed Sundays.<br>
+	    San Maru - Best Korean-style food in town. Soups are great on a cold day. Closed Sundays.<br>
 	    <br>
         </p>
       </div>
